1998-05-02  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c (SCM_CEVAL): Do more thorough argument checking.  This
	change makes the evaluator safer at the cost of evaluation speed.
	It handles the case when the user has added a non-immediate
	improper end of the application form, e.g., `(+ 0 . x)'.
	(Earlier only cases like `(+ 0 . 0)' were handled.)  I've tried to
	minimize the extra cost as much as possible.  The new code is
	enclosed in #ifdef CAUTIOUS regions.  NOTE: This also fixes the
	problem with structs planted directly in the code (e.g. by a
	macro).  This no longer causes segmentation fault.  (Thanks to
	Eric Hanchrow.)
	
	* eval.c, eval.h (scm_eval_args, scm_deval_args): Take one extra
	arg `proc' in order to be able to throw errors; New argument
	checking code.

	* Removed extra #include "debug.h"

1998-04-25  Mikael Djurfeldt  <mdj@kenneth>

	* scmsigs.c: Declare usleep as returning void on some systems.
	(scm_usleep): Return SCM_INUM0 on those systems. (Thanks to Julian
	Satchell.)

	* coop.c (usleep): Return void on some systems.

1998-04-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (libguile_la_LDFLAGS): Removed redundant -rpath.

	* coop.c: Changed return type of usleep to int.

	* scmsigs.c (scm_usleep): New procedure; Declare usleep if it
	isn't found in the OS.

	* iselect.h: #define scm_internal_select select if GUILE_ISELECT
	isn't enabled.  (Thought that I had made this change ages ago...)

	* iselect.c: Declare bzero if not defined by OS.

1998-04-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* dynl.c (scm_must_free_argv): Fixed memory leak due to negated
	condition.  (Thanks to John Tobey.)

	* continuations.c (scm_make_cont), debug.c (scm_make_memoized,
	scm_make_debugobj), eval.c (scm_makprom): SCM_DEFER/ALLOW_INTS -->
	A section.

	* __scm.h: Start the long-term project of moving to POSIX threads.
	Phase 1: Classification of all critical sections.
	(SCM_ENTER_A_SECTION, SCM_EXIT_A_SECTION): New macros: Delimiters